[package]
name = "rustgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = ["filesystem_watcher", "bevy_ui"] }
bevy_atmosphere = "0.4.1"
bevy_vox_mesh = "0.4.0"
